# Packet-client-paste

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
idea/: modules.xml  workspace.xml
src/: Solstice.cpp
src/Features/Auth/: Authorization.cpp  Authorization.hpp  CustomCryptor.hpp
src/Features/Command/: CommandManager.cpp
src/Features/Command/Commands/: BindCommand.cpp  BindCommand.hpp  BuildInfoCommand.cpp  BuildInfoCommand.hpp  ConfigCommand.cpp  ConfigCommand.hpp  CopyNameCommand.cpp  CopyNameCommand.hpp  FlingCommand.cpp  FlingCommand.hpp
src/Features/Modules/: Module.cpp  Module.hpp  ModuleCategory.hpp  ModuleManager.cpp  Setting.cpp
src/Features/Modules/Combat/: AimAssist.cpp  AimAssist.hpp  AntiBot.hpp  Aura.hpp  AutoPot.cpp  AutoPot.hpp  Criticals.cpp  Criticals.hpp  Regen.cpp  Regen.hpp  TargetStrafe.hpp  Teams.hpp  Velocity.hpp
src/Features/Modules/Movement/: InvMove.cpp  InvMove.hpp  Jesus.cpp  Jesus.hpp  NoSlow.cpp  NoSlow.hpp  Speed.cpp  Speed.hpp
src/Features/Modules/Other/: AntiCheatDetector.cpp  AntiCheatDetector.hpp  Anticheat.cpp  Anticheat.hpp  AutoAccept.cpp  AutoAccept.hpp  AutoCosmetic.cpp  AutoCosmetic.hpp  AutoDodge.cpp  AutoDodge.hpp  AutoHive.cpp  AutoHive.hpp  AutoLootbox.cpp  AutoLootbox.hpp  AutoMessage.cpp  AutoMessage.hpp  AutoQueue.cpp  AutoQueue.hpp  AutoReport.cpp  AutoReport.hpp  AutoSnipe.cpp  AutoSnipe.hpp  AutoVote.cpp  AutoVote.hpp  Breaker.cpp  Breaker.hpp  CostumeSpammer.cpp  CostumeSpammer.hpp  Desync.cpp  Desync.hpp  DeviceSpoof.hpp  Disabler.cpp  Disabler.hpp  EditionFaker.cpp  EditionFaker.hpp  Friends.cpp  Friends.hpp  KickSounds.cpp  KickSounds.hpp  Killsults.cpp  (+26 more)
src/Features/Modules/Player/: Manager.cpp  Manager.hpp  MidclickAction.cpp  OreBreaker.cpp  OreBreaker.hpp  OreMiner.cpp  OreMiner.hpp  Stealer.cpp  Stealer.hpp
src/Features/Modules/Render/: Ambience.cpp  Ambience.hpp  Animations.cpp  Animations.hpp  Arraylist.cpp  Arraylist.hpp  AutoScale.cpp  AutoScale.hpp  BabyBoy.cpp  BabyBoy.hpp  BlockESP.cpp  BlockESP.hpp  BoneEsp.cpp  BoneEsp.hpp  CameraClip.cpp  CameraClip.hpp  Chat.cpp  Chat.hpp  ChinaHat.cpp  ChinaHat.hpp  ClickGui.cpp  ClickGui.hpp  Counters.cpp  Counters.hpp  ESP.cpp  ESP.hpp  HPBar.cpp  HPBar.hpp  HitEffects.cpp  HitEffects.hpp  HudEditor.cpp  HudEditor.hpp  Interface.cpp  Interface.hpp  Keystrokes.cpp  Keystrokes.hpp  Nametags.cpp  Nametags.hpp  Notifications.cpp  Notifications.hpp  (+8 more)
src/Hook/: HookManager.cpp
src/Hook/Hooks/ActorHooks/: ActorModelHook.cpp  AnimationHooks.cpp  AnimationHooks.hpp  BaseTickHook.cpp  NametagRenderHook.cpp
src/Hook/Hooks/ContainerHooks/: ContainerScreenControllerHook.cpp
src/Hook/Hooks/MiscHooks/: FireBlockChangedHook.cpp  FireBlockChangedHook.hpp  KeyHook.cpp  MouseHook.cpp  PreGameHook.cpp  PreGameHook.hpp
src/Hook/Hooks/NetworkHooks/: ConnectionRequestHook.cpp
src/Hook/Hooks/RenderHooks/: ActorRenderDispatcherHook.cpp  HoverTextRendererHook.cpp  ItemRendererHook.cpp  LookInputHook.cpp  LookInputHook.hpp  RenderItemInHandHook.cpp  RenderItemInHandHook.hpp  SetupAndRenderHook.cpp
src/SDK/: OffsetProvider.cpp  SigManager.cpp
src/SDK/Minecraft/: KeyboardMouseSettings.cpp  KeyboardMouseSettings.hpp
src/SDK/Minecraft/Actor/: ActorRenderData.hpp  EntityContext.hpp  GameMode.hpp
src/SDK/Minecraft/Actor/Components/: BlockMovementSlowdownMultiplierComponent.hpp  CameraComponent.hpp  RenderPositionComponent.hpp  StateVectorComponent.hpp
src/SDK/Minecraft/Inventory/: ContainerManagerModel.hpp  Item.cpp  ItemStack.hpp
src/SDK/Minecraft/Network/Packets/: AddActorPacket.hpp  CameraInstructionPacket.hpp  ContainerClosePacket.hpp  CriticalHitPacket.hpp  InteractPacket.hpp  InventoryTransactionPacket.hpp  LevelEventPacket.hpp  MovePlayerPacket.hpp  PlayerActionPacket.hpp  PlayerAuthInputPacket.hpp  PlayerSkinPacket.hpp  SetActorMotionPacket.hpp  UpdateBlockPacket.hpp
src/SDK/Minecraft/Rendering/: BaseActorRenderContext.hpp  GuiData.cpp  GuiData.hpp  LevelRenderer.cpp  LevelRenderer.hpp
src/SDK/Minecraft/World/: Block.hpp  BlockLegacy.hpp  BlockSource.cpp  HitResult.hpp  Level.cpp  WeatherManager.cpp  WeatherManager.hpp  world.cpp  world.hpp
src/SDK/Minecraft/World/Chunk/: ChunkSource.hpp
src/Utils/: AudioUtils.cpp  AudioUtils.hpp  FileUtils.cpp  FontHelper.cpp  FontHelper.hpp  HashedString.hpp  Keyboard.cpp  Keyboard.hpp  MessageTemplate.cpp  MessageTemplate.hpp  OAuthUtils.cpp  OAuthUtils.hpp  Resources.cpp  Resources.hpp  Structs.hpp
src/Utils/GameUtils/: PacketUtils.cpp
src/Utils/MiscUtils/: Audio.cpp  BlockUtils.cpp  D2D.cpp  DataStore.hpp  ImRenderUtils.cpp  ImRenderUtils.hpp  MathUtils.cpp  RenderUtils.cpp
src/Utils/SysUtils/: Base64.cpp  Base64.hpp
